hphp/hack/test/typecheck/coeffects/ctx_with_missing_generics.php.exp
File "ctx_with_missing_generics.php", line 3, characters 36-46:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "coeffect/contexts.hhi", line 112, characters 8-18:
  Definition is here
File "ctx_with_missing_generics.php", line 7, characters 55-61:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "ctx_with_missing_generics.php", line 5, characters 7-12:
  Definition is here
